--- a/project/Web Science Project.ipynb
+++ b/project/Web Science Project.ipynb
@@ -16,15 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-73-17b72ffaef87>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCountVectorizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorpus\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mquestions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data/train_dataset.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"iso-8859-1\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\";\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     ]
+    }
+   ],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from nltk.corpus import stopwords\n",
     "\n",
     "questions = pd.read_csv(\"data/train_dataset.csv\", header=None, encoding=\"iso-8859-1\", sep=\";\")\n",
     "\n",
@@ -34,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -46,6 +59,24 @@
       "3675\n",
       "155.84244897959184\n",
       "65.00327103848835\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/pandas/core/indexing.py:362: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[key] = _infer_fill_value(value)\n",
+      "/usr/local/lib/python3.7/site-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
      ]
     }
    ],
@@ -61,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,17 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Classifier Model (Random Forest)\n",
     "\n",
-    "questions['question'] = questions['question'].str.replace('[^\\w\\s]','')\n",
-    "questions['answer'] = questions['answer'].str.replace('[^\\w\\s]','')\n",
-    "\n",
     "# 80% , 10%, 10%\n",
     "train, validate, test = np.split(questions.sample(frac=1), [int(.8 * len(questions)), int(.9 * len(questions))])\n",
+    "\n",
+    "train['question'] = train['question'].str.replace('[^\\w\\s]','')\n",
+    "train['answer'] = train['answer'].str.replace('[^\\w\\s]','')\n",
     "\n",
     "y = train[['topic']]\n",
     "\n",
@@ -185,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,9 +248,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_66 (Dense)             (None, 512)               51712     \n",
+      "_________________________________________________________________\n",
+      "activation_19 (Activation)   (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_10 (Dropout)         (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_67 (Dense)             (None, 5)                 2565      \n",
+      "_________________________________________________________________\n",
+      "activation_20 (Activation)   (None, 5)                 0         \n",
+      "=================================================================\n",
+      "Total params: 54,277\n",
+      "Trainable params: 54,277\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/2\n",
+      "7130/7130 [==============================] - 1s 114us/step - loss: 1.4486 - acc: 0.4058\n",
+      "Epoch 2/2\n",
+      "7130/7130 [==============================] - 0s 28us/step - loss: 1.3189 - acc: 0.4456\n",
+      "Training Accuracy: 0.4569\n",
+      "Testing Accuracy:  0.4417\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation, Dropout\n",
+    "from keras.preprocessing import text, sequence\n",
+    "from keras import utils\n",
+    "\n",
+    "tokenizer = Tokenizer(num_words=1000)\n",
+    "tokenizer.fit_on_texts(train['question'])\n",
+    "\n",
+    "X_train = tokenizer.texts_to_matrix(train['question'])\n",
+    "X_test = tokenizer.texts_to_matrix(test['question'])\n",
+    "\n",
+    "vocab_size = len(tokenizer.word_index) + 1  # Adding 1 because of reserved 0 index\n",
+    "\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "maxlen = 100\n",
+    "\n",
+    "X_train = pad_sequences(X_train, padding='post', maxlen=maxlen)\n",
+    "X_test = pad_sequences(X_test, padding='post', maxlen=maxlen)\n",
+    "\n",
+    "\n",
+    "\n",
+    "from keras.models import Sequential\n",
+    "from keras import layers\n",
+    "\n",
+    "max_words = 100\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(512, input_shape=(max_words,)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(num_classes))\n",
+    "model.add(Activation('softmax'))\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "model.summary()\n",
+    "\n",
+    "\n",
+    "encoder = LabelEncoder()\n",
+    "encoder.fit(train[\"topic\"])\n",
+    "y_train = encoder.transform(train[\"topic\"])\n",
+    "y_test = encoder.transform(test[\"topic\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "num_classes = 5\n",
+    "y_train = utils.to_categorical(y_train, num_classes)\n",
+    "y_test = utils.to_categorical(y_test, num_classes)\n",
+    "\n",
+    "model.fit(X_train, y_train, epochs=2, batch_size=128)\n",
+    "\n",
+    "loss, accuracy = model.evaluate(X_train, y_train, verbose=False)\n",
+    "print(\"Training Accuracy: {:.4f}\".format(accuracy))\n",
+    "loss, accuracy = model.evaluate(X_test, y_test, verbose=False)\n",
+    "print(\"Testing Accuracy:  {:.4f}\".format(accuracy))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of Training Samples: 7130\n",
+      "# of Test Samples: 892\n",
+      "# of Classes: 5\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-a4f28432d7c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mtokenizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_words\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mx_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msequences_to_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'binary'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0mx_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msequences_to_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'binary'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/keras_preprocessing/text.py\u001b[0m in \u001b[0;36msequences_to_matrix\u001b[0;34m(self, sequences, mode)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdefaultdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseq\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mnum_words\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m                     \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m                 \u001b[0mcounts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -231,69 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    id                                           question  \\\n",
-      "0    0  Which food contain more vitamin C; A lemon or ...   \n",
-      "1    0                   What is the largest human organ?   \n",
-      "2    0  How many dwarf planets are in the solar system...   \n",
-      "3    0  In which country were the first Olympic Games ...   \n",
-      "4    0  Which is the only country to have played in ea...   \n",
-      "5    0  Which popular fitness method was invented by a...   \n",
-      "6    0  What is the name of the cartoon where there ar...   \n",
-      "7    0       Who is the worldÃ¢ÂÂs largest land animal?   \n",
-      "8    0                 How many colours are in a rainbow?   \n",
-      "9    0                      Where is the group abba from?   \n",
-      "10   0  Which one direction member left the group in 2...   \n",
-      "11   0  What singer holds the world record for most wo...   \n",
-      "12   0                        What year did Wii come out?   \n",
-      "13   0  What is the highest selling video game console...   \n",
-      "14   0  What is the first female fighting game charact...   \n",
-      "15   0                      How many weeks are in a year?   \n",
-      "16   0                 What is the smallest prime number?   \n",
-      "17   0       What is the heaviest organ in the human body   \n",
-      "18   0           How many members are in a football team?   \n",
-      "19   0                   Where is the birthplace of golf?   \n",
-      "20   0  Which football player keeps the highest goal s...   \n",
-      "21   0                   Who wrote the little match girl?   \n",
-      "22   0           What is the name of Cinderella's prince?   \n",
-      "23   0  Is yellow one of the standard additive primary...   \n",
-      "24   0  What is the birth country of FrÃÂ©dÃÂ©ric Ch...   \n",
-      "\n",
-      "                 answer difficulty  opinion  factuality  \n",
-      "0                 lemon     Medium        1           0  \n",
-      "1                  skin     Medium        3           0  \n",
-      "2                     1       Hard        2           0  \n",
-      "3                Greece     Medium        3           0  \n",
-      "4                 Spain       Hard        2           0  \n",
-      "5                             Hard        2           0  \n",
-      "6   The PowerPuff Girls       Hard        3           0  \n",
-      "7              Elephant     Medium        3           0  \n",
-      "8                     7       Easy        2           0  \n",
-      "9                           Medium        2           0  \n",
-      "10                 Zayn       Hard        2           0  \n",
-      "11               Eminem     Medium        2           0  \n",
-      "12                 2009     Medium        2           0  \n",
-      "13                  PS4     Medium        2           0  \n",
-      "14                            Hard        3           0  \n",
-      "15                   53     Medium        2           0  \n",
-      "16                    2     Medium        3           0  \n",
-      "17                brain     Medium        3           0  \n",
-      "18                   11       Easy        1           1  \n",
-      "19                            Hard        1           0  \n",
-      "20                            Hard        1           0  \n",
-      "21                          Medium        2           0  \n",
-      "22                          Medium        2           0  \n",
-      "23                  yes       Easy        2           0  \n",
-      "24                          Medium        2           0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generated_questions = pd.read_csv(\"data/sample_crowdsourcing.tsv\", encoding=\"ISO-8859-1\", delimiter=\"\\t\", na_filter=False)\n",
     "generated_questions.columns = ['id', 'question', 'answer', 'difficulty', 'opinion', 'factuality']\n",
